forth/test/fail/test_const_fold_redundant_loc_div_one.af
use' ../../lang.af
fun: test_const_fold_redundant_loc_div_one { val -- out } 1 /: val val end
